--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mongodb": "^3.0.4",
     "mongoose": "^5.0.10",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "uuid": "^3.2.1"
   }
 }
